namespaces/cdn/pod.yml
---
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#creating-a-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdn
spec:
  selector:
    matchLabels:
      app: cdn
  replicas: 1
  template: # create pods; pod template
    metadata:
      labels:
        app: cdn
    spec:
#     restartPolicy: Never
      containers:
      - name: cdn
        image: svlentink/mywebsite
        imagePullPolicy: Always
        #ports:
        #- containerPort: 80
        volumeMounts:
        - name: cdn-pdf
          mountPath: /var/www/cdn.lent.ink/pdf
        - name: cdn-tar
          mountPath: /var/www/cdn.lent.ink/tar
        - name: cdn-img
          mountPath: /var/www/cdn.lent.ink/img
        - name: cdn-lp
          mountPath: /var/www/cdn.lent.ink/lp
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d
        livenessProbe:
          exec:
            command:
            - date
            - +%T
            - '|'
            - grep
            - -v
            - '04:32:'
          periodSeconds: 58
          initialDelaySeconds: 36000
      volumes:
      - name: cdn-pdf
        hostPath:
          path: /mnt/k8s/cdn/pdf
#        persistentVolumeClaim:
#          claimName: cdn-pdf-claim
#          readOnly: true
      - name: cdn-tar
        hostPath:
          path: /mnt/k8s/cdn/tar
      - name: cdn-img
        hostPath:
          path: /mnt/k8s/cdn/img
      - name: cdn-lp
        hostPath:
          path: /mnt/k8s/ide/gits/pp/lp
      - name: nginx-conf
        hostPath:
          path: /mnt/k8s/ide/gits/www/nginx
