namespaces/cdn/ing-auth.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basicauth-file-explorer
    nginx.ingress.kubernetes.io/auth-realm: 'Homework env. please login'
    nginx.ingress.kubernetes.io/rewrite-target: /
    # The following snippet prevents MITM proxies from spying
    nginx.ingress.kubernetes.io/server-snippet: |
      if ($scheme = "http") { #without this, ACME challenges fail
        set $set_label_to_tls TLSv1.3;
      }
      set $tls_test "${ssl_protocol}${set_label_to_tls}";
      if ($tls_test != "TLSv1.3") {
        return 302 https://google.com/?q=enforce+browser+to+use+TLSv1.3+instead+of+$ssl_protocol;
      }
#      add_header DNT "1" always;
#      add_header Content-Type "text/javascript" always;
#      types {
#        text/javascript .mjs;
#      }
#      include mime.types;
#    nginx.ingress.kubernetes.io/configuration-snippet: |
spec:
  rules:
  - host: &host dev-fs.lent.ink
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cdn
            port:
              number: 80
  tls:
  - hosts:
    - *host
    secretName: fs-tls
