namespaces/cdn/ing-http.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://blob.huil.bid"
    nginx.ingress.kubernetes.io/enable-cors: "true"
#    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cdn
            port:
              number: 80
