namespaces/cdn/ing-https.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
# https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#server-side-https-enforcement-through-redirect

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https
  annotations:
# https://github.com/kubernetes/ingress-nginx/blob/master/docs/user-guide/nginx-configuration/annotations.md#ssl-ciphers
#    nginx.ingress.kubernetes.io/ssl-ciphers: 'TLS13-CHACHA20-POLY1305-SHA256:TLS13-AES-256-GCM-SHA384:TLS13-AES-128-GCM-SHA256'
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: lent.ink
    http: &http_rules
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cdn
            port:
              number: 80
  - host: cdn.lent.ink
    http: *http_rules
  - host: blog.lent.ink
    http: *http_rules
  - host: loginalsburger.nl
    http: *http_rules
  - host: lentink.consulting
    http: *http_rules
  - host: www.lent.ink
    http: *http_rules
  - host: www.curly.ninja
    http: *http_rules
  - host: www.loginalsburger.nl
    http: *http_rules
  - host: www.lentink.consulting
    http: *http_rules
  tls:
  - hosts:
    - lent.ink
    - cdn.lent.ink
    - blog.lent.ink
    - curly.ninja
    - loginalsburger.nl
    - lentink.consulting
    - www.lent.ink
    - www.curly.ninja
    - www.loginalsburger.nl
    - www.lentink.consulting
    secretName: cdn-tls
